<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login2"
        android:layout_width="159dp"
        android:layout_height="61dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/customwhitebutton"
        android:fontFamily="@font/montserratbold"
        android:text="@string/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionLogin4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="157dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/customwhitebutton"
        android:drawableStart="@drawable/facebook_logo_icon_147291"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:text="@string/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/optionLogin4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="157dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/customwhitebutton"
        android:drawableStart="@drawable/google_icon_icons_com_62736"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:text="@string/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionLogin4" />

    <TextView
        android:id="@+id/optionLogin4"
        android:layout_width="161dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/optLogin2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionLogin3" />

    <TextView
        android:id="@+id/loginline"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:text="@string/account"
        android:textColor="@color/green1"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/optionLogin3"
        android:layout_width="47dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/optLogin"
        android:text="@string/optLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/icons8_key_32"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:autofillHints="username"
        android:drawableStart="@drawable/icons8_user_32"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin2" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:drawableStart="@drawable/icons8_email_32"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <TextView
        android:id="@+id/titleLogin2"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:text="@string/title_activity_register"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="413dp"
        android:layout_height="181dp"
        android:contentDescription="@string/logowc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_37b7a29_ade3_49b7_a2ee_ba3aaa75e3e8" />
</androidx.constraintlayout.widget.ConstraintLayout>